1
error: Class names, 'output.txt', are only accepted if annotation processing is explicitly requested
./Lexer.java:6: error: package node does not exist
import node.*;
^
./Lexer.java:11: error: cannot find symbol
    protected Token token;
              ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:14: error: cannot find symbol
    private IPushbackReader in;
            ^
  symbol:   class IPushbackReader
  location: class Lexer
./Lexer.java:22: error: cannot find symbol
    protected void filter() throws LexerException, IOException
                                   ^
  symbol:   class LexerException
  location: class Lexer
./Lexer.java:45: error: cannot find symbol
    public Lexer(@SuppressWarnings("hiding") IPushbackReader in)
                                             ^
  symbol:   class IPushbackReader
  location: class Lexer
./Lexer.java:50: error: cannot find symbol
    public Token peek() throws LexerException, IOException
           ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:50: error: cannot find symbol
    public Token peek() throws LexerException, IOException
                               ^
  symbol:   class LexerException
  location: class Lexer
./Lexer.java:61: error: cannot find symbol
    public Token next() throws LexerException, IOException
           ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:61: error: cannot find symbol
    public Token next() throws LexerException, IOException
                               ^
  symbol:   class LexerException
  location: class Lexer
./Lexer.java:74: error: cannot find symbol
    protected Token getToken() throws IOException, LexerException
              ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:74: error: cannot find symbol
    protected Token getToken() throws IOException, LexerException
                                                   ^
  symbol:   class LexerException
  location: class Lexer
./Lexer.java:429: error: cannot find symbol
    Token new0(@SuppressWarnings("hiding") String text, @SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TEnd(text, line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:430: error: cannot find symbol
    Token new1(@SuppressWarnings("hiding") String text, @SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TDiv(text, line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:431: error: cannot find symbol
    Token new2(@SuppressWarnings("hiding") String text, @SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TVar(text, line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:432: error: cannot find symbol
    Token new3(@SuppressWarnings("hiding") String text, @SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TBegin(text, line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:433: error: cannot find symbol
    Token new4(@SuppressWarnings("hiding") String text, @SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TProgram(text, line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:434: error: cannot find symbol
    Token new5(@SuppressWarnings("hiding") String text, @SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TWriteln(text, line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:435: error: cannot find symbol
    Token new6(@SuppressWarnings("hiding") String text, @SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TInteger(text, line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:436: error: cannot find symbol
    Token new7(@SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TPlus(line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:437: error: cannot find symbol
    Token new8(@SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TMinus(line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:438: error: cannot find symbol
    Token new9(@SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TMult(line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:439: error: cannot find symbol
    Token new10(@SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TMod(line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:440: error: cannot find symbol
    Token new11(@SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TAssign(line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:441: error: cannot find symbol
    Token new12(@SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TComma(line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:442: error: cannot find symbol
    Token new13(@SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TColon(line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:443: error: cannot find symbol
    Token new14(@SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TSemicolon(line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:444: error: cannot find symbol
    Token new15(@SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TDot(line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:445: error: cannot find symbol
    Token new16(@SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TLPar(line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:446: error: cannot find symbol
    Token new17(@SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TRPar(line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:447: error: cannot find symbol
    Token new18(@SuppressWarnings("hiding") String text, @SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TIdentifier(text, line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:448: error: cannot find symbol
    Token new19(@SuppressWarnings("hiding") String text, @SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TNumber(text, line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:449: error: cannot find symbol
    Token new20(@SuppressWarnings("hiding") String text, @SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TComment(text, line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:450: error: cannot find symbol
    Token new21(@SuppressWarnings("hiding") String text, @SuppressWarnings("hiding") int line, @SuppressWarnings("hiding") int pos) { return new TWhitespace(text, line, pos); }
    ^
  symbol:   class Token
  location: class Lexer
./Lexer.java:480: error: cannot find symbol
    protected void unread(@SuppressWarnings("hiding") Token token) throws IOException
                                                      ^
  symbol:   class Token
  location: class Lexer
StupsCompiler.java:37: error: cannot access Lexer
               Lexer lexer = new Lexer(reader);
               ^
  bad source file: ./Lexer.java
    file does not contain class Lexer
    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
36 errors
